--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,21 @@
 .zindex-2 .fd-inline-help__content {
   z-index: 2;
 }
+
+main.table-wrapper {
+  margin: 0 2rem;
+}
+
+section .header {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.column ul {
+  margin-bottom: 2rem;
+}
+
+.column ul .fd-tile {
+  margin-bottom: 2rem;
+}
